--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=root
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 mybatis.type-aliases-package=com.example.demo1.pojo
 mybatis.mapper-locations=classpath:mapper/*.xml
+server.port=8088
